@@ -13,8 +13,8 @@ import asyncio
 
 # -- Curio
 
-from .traps import _scheduler_wait, _scheduler_wake, _future_wait
-from .sched import SchedFIFO
+from .traps import _future_wait
+from .sched import SchedFIFO, SchedBarrier
 from .errors import CurioError, CancelledError
 from .meta import awaitable, asyncioable, sync_only
 from . import workers
@@ -31,7 +31,7 @@ class QueueBase:
         self.maxsize = maxsize
         self._get_waiting = SchedFIFO()
         self._put_waiting = SchedFIFO()
-        self._join_waiting = SchedFIFO()
+        self._join_waiting = SchedBarrier()
         self._task_count = 0
         self._queue = self._init_internal_queue()
 
@@ -49,25 +49,25 @@ class QueueBase:
         must_wait = bool(self._get_waiting)
         while must_wait or self.empty():
             must_wait = False
-            await _scheduler_wait(self._get_waiting, 'QUEUE_GET')
+            await self._get_waiting.suspend('QUEUE_GET')
 
         result = self._get_item()
 
         if self._put_waiting:
-            await _scheduler_wake(self._put_waiting, n=1)
+            await self._put_waiting.wake()
         return result
 
     async def join(self):
         if self._task_count > 0:
-            await _scheduler_wait(self._join_waiting, 'QUEUE_JOIN')
+            await self._join_waiting.suspend('QUEUE_JOIN')
 
     async def put(self, item):
         while self.full():
-            await _scheduler_wait(self._put_waiting, 'QUEUE_PUT')
+            await self._put_waiting.suspend('QUEUE_PUT')
         self._put_item(item)
         self._task_count += 1
         if self._get_waiting:
-            await _scheduler_wake(self._get_waiting, n=1)
+            await self._get_waiting.wake()
 
     def qsize(self):
         return len(self._queue)
@@ -75,7 +75,7 @@ class QueueBase:
     async def task_done(self):
         self._task_count -= 1
         if self._task_count == 0 and self._join_waiting:
-            await _scheduler_wake(self._join_waiting, n=len(self._join_waiting))
+            await self._join_waiting.wake()
 
     def __aiter__(self):
         return self
